--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -8,6 +8,14 @@ QPushButton:focus {
     outline: none;
 }
 
+PreferencesDialog #buttonAddVstScanFolder{
+background-image: url(:/images/more.png);
+background-position: center center;
+background-repeat: none;
+/*height: %;*/
+margin-right: 24px;
+}
+
 #voteButton{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop:0 rgba(255,255,255, 240),
