allowing BPI [3, 64] and BPM [40, 400]

--- a/Client/src/gui/NinjamPanel.ui
+++ b/Client/src/gui/NinjamPanel.ui
@@ -484,6 +484,9 @@
         <property name="currentText">
          <string notr="true"/>
         </property>
+        <property name="maxVisibleItems">
+         <number>40</number>
+        </property>
        </widget>
       </item>
       <item row="2" column="0">
