--- a/Client/src/gui/NinjamRoomWindow.ui
+++ b/Client/src/gui/NinjamRoomWindow.ui
@@ -104,23 +104,22 @@
        <number>9</number>
       </property>
       <property name="topMargin">
-       <number>0</number>
+       <number>6</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
       <item>
-       <widget class="NinjamPanel" name="topPanel" native="true">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-       </widget>
+       <widget class="NinjamPanel" name="topPanel" native="true"/>
       </item>
       <item>
        <widget class="QScrollArea" name="scrollArea">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>1</verstretch>
+         </sizepolicy>
+        </property>
         <property name="verticalScrollBarPolicy">
          <enum>Qt::ScrollBarAlwaysOff</enum>
         </property>
@@ -136,7 +135,7 @@
            <x>0</x>
            <y>0</y>
            <width>727</width>
-           <height>199</height>
+           <height>385</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
