--- a/src/gui/BaseTrackView.ui
+++ b/src/gui/BaseTrackView.ui
@@ -263,32 +263,20 @@
          <item row="0" column="0">
           <widget class="PeakMeter" name="peakMeterLeft" native="true">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>1</verstretch>
             </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>10</width>
-             <height>0</height>
-            </size>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="PeakMeter" name="peakMeterRight" native="true">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>1</verstretch>
             </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>10</width>
-             <height>0</height>
-            </size>
            </property>
           </widget>
          </item>
